@@ -22,12 +22,12 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  */
-const char sccsid[] = "@(#)lex.sl	2.8 (gritter) 11/26/05";
+const char sccsid[] = "@(#)lex.sl	2.9 (gritter) 11/27/05";
 const char pkg[] = "Heirloom Development Tools";
-const char rel[] = "2.8 (gritter) 11/26/05";
+const char rel[] = "2.9 (gritter) 11/27/05";
 /* SLIST */
 /*
-allprint.c: * Sccsid @(#)allprint.c	1.3 (gritter) 6/18/05
+allprint.c: * Sccsid @(#)allprint.c	1.4 (gritter) 11/27/05
 getopt.c: * Sccsid @(#)getopt.c	1.8 (gritter) 8/2/05
 header.c: * Sccsid @(#)header.c	1.11 (gritter) 11/26/05
 ldefs.c: * Sccsid @(#)ldefs.c	1.5 (gritter) 11/26/05
@@ -36,13 +36,13 @@ lsearch.c: * Sccsid @(#)lsearch.c	1.4 (gritter) 11/26/05
 main.c: * Sccsid @(#)main.c	1.9 (gritter) 11/26/05
 once.h: * Sccsid @(#)once.h	1.4 (gritter) 11/26/05
 parser.y: * Sccsid @(#)parser.y	1.8 (gritter) 11/26/05
-reject.c: * Sccsid @(#)reject.c	1.3 (gritter) 6/18/05
+reject.c: * Sccsid @(#)reject.c	1.4 (gritter) 11/27/05
 search.h: * Sccsid @(#)search.h	1.4 (gritter) 11/26/05
 sub1.c: * Sccsid @(#)sub1.c	1.5 (gritter) 11/26/05
 sub2.c: * Sccsid @(#)sub2.c	1.6 (gritter) 11/26/05
 sub3.c: * Sccsid @(#)sub3.c	1.4 (gritter) 11/26/05
 wcio.c: * Sccsid @(#)wcio.c	1.1 (gritter) 6/25/05
-yyless.c: * Sccsid @(#)yyless.c	1.5 (gritter) 11/26/05
+yyless.c: * Sccsid @(#)yyless.c	1.6 (gritter) 11/27/05
 yywrap.c: * Sccsid @(#)yywrap.c	1.3 (gritter) 6/18/05
 nceucform: * Sccsid @(#)nceucform	1.6 (gritter) 11/18/05
 ncform: * Sccsid @(#)ncform	1.4 (gritter) 11/18/05
